@@ -1,5 +1,12 @@
 2025-09-26  Zhengyi Fu  <i@fuzy.me>
 
+	Update macros in dotemacs-core
+
+	* site-lisp/dotemacs-core.el (delq!, remq!): Fix.
+	(delete!, remove!): New functions.
+
+2025-09-26  Zhengyi Fu  <i@fuzy.me>
+
 	Fix modify-other-keys--init
 
 	* site-lisp/modify-other-keys.el (modify-other-keys--init):
